--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "chetan-react-portfolio",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
-  }
+	"name": "chetan-react-portfolio",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "yarn cache clean --force && next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "12.0.7",
+		"next-pwa": "^5.3.1",
+		"node-fetch": "^3.1.0",
+		"react": "17.0.2",
+		"react-animate-on-scroll": "^2.1.5",
+		"react-dom": "17.0.2",
+		"react-tsparticles": "^1.37.5"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.8",
+		"@types/react": "17.0.38",
+		"@types/react-animate-on-scroll": "^2.1.5",
+		"@types/react-dom": "^17.0.11",
+		"autoprefixer": "^10.4.0",
+		"eslint": "8.6.0",
+		"eslint-config-next": "12.0.7",
+		"postcss": "^8.4.5",
+		"postcss-preset-env": "^7.1.0",
+		"prettier": "^2.5.1",
+		"tailwind-scrollbar-hide": "^1.1.7",
+		"tailwindcss": "^3.0.7",
+		"typescript": "4.5.4"
+	}
 }
