--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	"dependencies": {
 		"next": "12.0.7",
 		"next-pwa": "^5.3.1",
+		"prop-types": "^15.8.1",
 		"react": "17.0.2",
 		"react-animate-on-scroll": "^2.1.5",
 		"react-dom": "17.0.2",
+		"react-icons": "^4.3.1",
 		"react-tsparticles": "^1.37.5"
 	},
 	"devDependencies": {
