--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"emailjs-com": "^3.2.0",
 		"next": "12.0.7",
 		"next-pwa": "^5.3.1",
 		"prop-types": "^15.8.1",
