--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,40 +11,40 @@
 	"description": "Chetan Portfolio for Full Stack Development",
 	"screenshots": [
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-200,h-192,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-200,h-192,f-png,r-100",
 			"type": "image/png",
 			"sizes": "200x200"
 		}
 	],
 	"icons": [
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-192,h-192,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-200,h-192,f-png,r-100",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-256,h-256,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-256,h-256,f-png,r-100",
 			"sizes": "256x256",
 			"type": "image/png"
 		},
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-384,h-384,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-384,h-384,f-png,r-100",
 			"sizes": "384x384",
 			"type": "image/png"
 		},
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-512,h-512,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-512,h-512,f-png,r-100",
 			"sizes": "512x512",
 			"type": "image/png"
 		},
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-192,h-192,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-192,h-192,f-png,r-100",
 			"type": "image/png",
 			"sizes": "192x192",
 			"purpose": "maskable"
 		},
 		{
-			"src": "https://ik.imagekit.io/aqaseg5nkl6/portfolio/ChetanId.jpg?tr=w-512,h-512,f-png",
+			"src": "https://ik.imagekit.io/clhowstalgz/chetan?tr=w-512,h-512,f-png",
 			"type": "image/png",
 			"sizes": "512x512"
 		}
