--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-animate-on-scroll": "^2.1.5",
 		"react-dom": "17.0.2",
 		"react-icons": "^4.3.1",
+		"react-markdown": "^7.1.2",
 		"react-tsparticles": "^1.37.5"
 	},
 	"devDependencies": {
