--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react-dom": "17.0.2",
 		"react-icons": "^4.3.1",
 		"react-markdown": "^7.1.2",
-		"react-tsparticles": "^1.37.5"
+		"react-tsparticles": "^1.37.5",
+		"typed.js": "^2.0.12"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.8",
