--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
 		"@types/react-dom": "^17.0.11",
 		"autoprefixer": "^10.4.0",
 		"eslint": "8.6.0",
-		"eslint-config-next": "12.0.7",
+		"eslint-config-next": "12.0.8",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
 		"postcss": "^8.4.5",
 		"postcss-preset-env": "^7.1.0",
 		"prettier": "^2.5.1",
