--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 		"dev": "next dev",
 		"build": "yarn cache clean --force && next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"analyze": "cross-env ANALYZE=true next build",
+		"analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+		"analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
 	},
 	"dependencies": {
 		"emailjs-com": "^3.2.0",
