--- a/package.json
+++ b/package.json
@@ -1,45 +1,39 @@
 {
-	"name": "chetan-react-portfolio",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "yarn cache clean --force && next build",
-		"start": "next start",
-		"lint": "next lint",
-		"analyze": "cross-env ANALYZE=true next build",
-		"analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-		"analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
-	},
-	"dependencies": {
-		"emailjs-com": "^3.2.0",
-		"next": "12.1.5",
-		"react": "18.0.0",
-		"next-pwa": "^5.3.1",
-		"prop-types": "^15.8.1",
-		"react-animate-on-scroll": "^2.1.5",
-		"react-dom": "18.0.0",
-		"react-icons": "^4.3.1",
-		"react-markdown": "^7.1.2",
-		"react-tsparticles": "^1.37.5",
-		"typed.js": "^2.0.12"
-	},
-	"devDependencies": {
-		"@types/node": "17.0.8",
-		"@types/react": "17.0.38",
-		"@types/react-animate-on-scroll": "^2.1.5",
-		"@types/react-dom": "^17.0.11",
-		"autoprefixer": "^10.4.0",
-		"eslint": "8.6.0",
-		"eslint-config-next": "12.0.8",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-react": "^7.28.0",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"postcss": "^8.4.5",
-		"postcss-preset-env": "^7.1.0",
-		"prettier": "^2.5.1",
-		"tailwind-scrollbar-hide": "^1.1.7",
-		"tailwindcss": "^3.0.7",
-		"typescript": "4.5.4"
-	}
+  "name": "chetan-react-portfolio",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "emailjs-com": "^3.2.0",
+    "next": "13.0.0",
+    "react": "18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-markdown": "^8.0.3",
+    "typed.js": "^2.0.12"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.8",
+    "@types/react": "17.0.38",
+    "@types/react-animate-on-scroll": "^2.1.5",
+    "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.0",
+    "eslint": "8.6.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss": "^8.4.5",
+    "postcss-preset-env": "^7.1.0",
+    "prettier": "^2.5.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.0.7",
+    "typescript": "4.5.4"
+  }
 }
