--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,34 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"lib": ["es5", "es6", "dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"incremental": true
-	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.tsx"],
-	"exclude": ["node_modules", "package-lock.json", ".vscode", "**/*.js", "public", ".next", "build", "styles"]
+  "compilerOptions": {
+    "target": "es6",
+    "lib": ["es5", "es6", "dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/styles/pages/_document.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "package-lock.json",
+    ".vscode",
+    "**/*.js",
+    "public",
+    ".next",
+    "build",
+    "styles"
+  ]
 }
