--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
-  "name": "chetan-react-portfolio",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "emailjs-com": "^3.2.0",
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "react-markdown": "^8.0.3",
-    "typed.js": "^2.0.12"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "@types/react-animate-on-scroll": "^2.1.5",
-    "@types/react-dom": "^17.0.11",
-    "autoprefixer": "^10.4.0",
-    "eslint": "8.6.0",
-    "eslint-config-next": "13.0.6",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "postcss": "^8.4.5",
-    "postcss-preset-env": "^7.1.0",
-    "prettier": "^2.5.1",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
-  }
+	"name": "chetan-react-portfolio",
+	"private": false,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"emailjs-com": "^3.2.0",
+		"next": "14.1.0",
+		"react": "18.2.0",
+		"react-animate-on-scroll": "^2.1.7",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.12.0",
+		"react-markdown": "^9.0.1",
+		"typed.js": "^2.1.0"
+	},
+	"devDependencies": {
+		"@types/node": "20.11.19",
+		"@types/react": "18.2.55",
+		"@types/react-animate-on-scroll": "^2.1.8",
+		"@types/react-dom": "^18.2.19",
+		"autoprefixer": "^10.4.17",
+		"postcss": "^8.4.35",
+		"postcss-preset-env": "^9.3.0",
+		"tailwind-scrollbar-hide": "^1.1.7",
+		"tailwindcss": "^3.4.1",
+		"typescript": "5.3.3"
+	}
 }
