--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
 	"name": "chetan-react-portfolio",
 	"private": false,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"emailjs-com": "^3.2.0",
-		"next": "14.1.0",
+		"next": "^14.2.3",
 		"react": "18.2.0",
 		"react-animate-on-scroll": "^2.1.7",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.12.0",
-		"react-markdown": "^9.0.1",
 		"typed.js": "^2.1.0"
 	},
 	"devDependencies": {
