--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended"],
+	"extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended", "eslint-plugin-react-compiler"],
 	"env": {
 		"browser": true,
 		"node": true,
@@ -14,6 +14,7 @@
 		}
 	},
 	"rules": {
+		"react-compiler/react-compiler": "error",
 		"react/prop-types": 0,
 		"react-hooks/rules-of-hooks": "warn",
 		"@next/next/no-document-import-in-page": "off",
