--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-	"name": "chetan-react-portfolio",
-	"private": false,
-	"scripts": {
-		"dev": "next dev --turbo",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"emailjs-com": "^3.2.0",
-		"next": "^14.2.3",
-		"react": "18.2.0",
-		"react-animate-on-scroll": "^2.1.7",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.12.0",
-		"typed.js": "^2.1.0"
-	},
-	"devDependencies": {
-		"@types/node": "20.11.19",
-		"@types/react": "18.2.55",
-		"@types/react-animate-on-scroll": "^2.1.8",
-		"@types/react-dom": "^18.2.19",
-		"autoprefixer": "^10.4.17",
-		"postcss": "^8.4.35",
-		"postcss-preset-env": "^9.3.0",
-		"tailwind-scrollbar-hide": "^1.1.7",
-		"tailwindcss": "^3.4.1",
-		"typescript": "5.3.3"
-	}
+  "name": "chetan-react-portfolio",
+  "private": false,
+  "scripts": {
+    "dev": "next dev --turbo",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
+    "emailjs-com": "^3.2.0",
+    "next": "^14.3.0-canary.76",
+    "react": "^19.0.0-rc-81c5ff2e04-20240521",
+    "react-animate-on-scroll": "^2.1.7",
+    "react-dom": "^19.0.0-rc-81c5ff2e04-20240521",
+    "react-icons": "^4.12.0",
+    "typed.js": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.19",
+    "@types/react": "18.2.55",
+    "@types/react-animate-on-scroll": "^2.1.8",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint-plugin-react-compiler": "^0.0.0-experimental-c8b3f72-20240517",
+    "postcss": "^8.4.35",
+    "postcss-preset-env": "^9.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
+  }
 }
